--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Próximamente aquí estará la página personal del doctor Fabio Cotes</h1>
-<p>Mi hosting es GitHub Pages.</p>
+<h1>Fabio Rafael Alberto Cotes Zuleta</h1>
+<p>2025</p>
 </body>
 </html>
