--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
+---
+layout: default
+title: Dr. Fabio Cotes - Médico Especialista en Hemodiálisis
+permalink: /
+---
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dr. Fabio Cotes - Médico Especialista en Hemodiálisis</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -15,10 +20,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html" class="active">Inicio</a></li>
-                <li><a href="colegas.html">Para Colegas</a></li>
-                <li><a href="pacientes.html">Para Pacientes</a></li>
-                <li><a href="personal.html">Espacio Personal</a></li>
+                <li><a href="{{ '/' | relative_url }}" class="active">Inicio</a></li>
+                <li><a href="{{ '/colegas' | relative_url }}">Para Colegas</a></li>
+                <li><a href="{{ '/pacientes' | relative_url }}">Para Pacientes</a></li>
+                <li><a href="{{ '/personal' | relative_url }}">Espacio Personal</a></li>
             </ul>
         </nav>
     </header>
@@ -53,19 +58,19 @@
                     <div class="card-icon"><i class="fas fa-user-md"></i></div>
                     <h3>Para Colegas</h3>
                     <p>Guías clínicas, protocolos de actuación en hemodiálisis y herramientas profesionales.</p>
-                    <a href="colegas.html" class="btn">Explorar</a>
+                    <a href="{{ '/colegas' | relative_url }}" class="btn">Explorar</a>
                 </div>
                 <div class="card">
                     <div class="card-icon"><i class="fas fa-heartbeat"></i></div>
                     <h3>Para Pacientes</h3>
                     <p>Blog informativo y recursos educativos sobre hemodiálisis y cuidado de la salud renal.</p>
-                    <a href="pacientes.html" class="btn">Explorar</a>
+                    <a href="{{ '/pacientes' | relative_url }}" class="btn">Explorar</a>
                 </div>
                 <div class="card">
                     <div class="card-icon"><i class="fas fa-home"></i></div>
                     <h3>Espacio Personal</h3>
                     <p>Fotografías, actividades y reflexiones sobre mis valores personales.</p>
-                    <a href="personal.html" class="btn">Explorar</a>
+                    <a href="{{ '/personal' | relative_url }}" class="btn">Explorar</a>
                 </div>
             </div>
         </section>
@@ -77,10 +82,10 @@
                 <p>&copy; 2025 Dr. Fabio Cotes - Todos los derechos reservados</p>
             </div>
             <div class="footer-nav">
-                <a href="index.html">Inicio</a>
-                <a href="colegas.html">Para Colegas</a>
-                <a href="pacientes.html">Para Pacientes</a>
-                <a href="personal.html">Espacio Personal</a>
+                <a href="{{ '/' | relative_url }}">Inicio</a>
+                <a href="{{ '/colegas' | relative_url }}">Para Colegas</a>
+                <a href="{{ '/pacientes' | relative_url }}">Para Pacientes</a>
+                <a href="{{ '/personal' | relative_url }}">Espacio Personal</a>
             </div>
         </div>
         <!-- Ícono para futuro chatbot -->
@@ -89,6 +94,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="{{ '/assets/js/script.js' | relative_url }}"></script>
 </body>
 </html>
