On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	modified:   colegas.html
	modified:   pacientes.html
	modified:   personal.html

--- a/personal.html
+++ b/personal.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Dr. Fabio Cotes - Médico Especialista en Hemodiálisis
-permalink: /
+title: Espacio Personal - Dr. Fabio Cotes
+permalink: /personal
 ---
 <!DOCTYPE html>
 <html lang="es">
