--- a/colegas.html
+++ b/colegas.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Dr. Fabio Cotes - Médico Especialista en Hemodiálisis
-permalink: /
+title: Para Colegas - Dr. Fabio Cotes
+permalink: /colegas
 ---
 <!DOCTYPE html>
 <html lang="es">
