--- a/pacientes.html
+++ b/pacientes.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Dr. Fabio Cotes - Médico Especialista en Hemodiálisis
-permalink: /
+title: Para Pacientes - Dr. Fabio Cotes
+permalink: /pacientes
 ---
 <!DOCTYPE html>
 <html lang="es">
@@ -30,8 +30,7 @@ permalink: /
 
     <main>
         <section class="page-header">
-            <h1>Información para pacientes</h1>
-            <p>Recursos, consejos y guías para personas en tratamiento de hemodiálisis</p>
+            <!-- ...resto del contenido... -->
         </section>
 
         <section class="content-section">
