On branch main  Your branch is behind 'origin/main' by 1 commit, and can be fast-forwarded.    (use "git pull" to update your local branch)
 Changes to be committed:
	new file:   assets/images/perfil/fabiocotesmd_perfil (800x800).webp
	new file:   assets/images/perfil/fabiocotesmd_perfil.webp
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@ permalink: /
 <section class="about">
     <div class="about-content">
         <div class="about-image">
-            <!-- Aquí irá tu imagen profesional -->
-            <div class="profile-placeholder"></div>
+            <img src="{{ '/assets/images/perfil/fabiocotesmd_perfil.webp' | relative_url }}" alt="Dr. Fabio Cotes" class="profile-image">
         </div>
         <div class="about-text">
             <h2>Sobre mí</h2>
