--- a/colegas.html
+++ b/colegas.html
@@ -17,9 +17,9 @@ permalink: /colegas/
     <div class="resources-grid">
         <div class="resource-card">
             <div class="resource-icon"><i class="fas fa-file-pdf"></i></div>
-            <h3>Protocolo de manejo de accesos vasculares</h3>
-            <p>Guía actualizada sobre cuidados y manejo de accesos vasculares en pacientes en hemodiálisis.</p>
-            <a href="{{ '/assets/docs/protocolo-accesos-vasculares.pdf' | relative_url }}" class="btn">Descargar PDF</a>
+            <h3>Guía de manejo de accesos vasculares</h3>
+            <p>Enlace a la Guía Clínica Española del Acceso Vascular para Hemodiálisis.</p>
+            <a href="{{ 'assets\docs\S0211699517302175.pdf' | relative_url }}" class="btn">Descargar PDF</a>
         </div>
         <div class="resource-card">
             <div class="resource-icon"><i class="fas fa-file-pdf"></i></div>
