On branch main  Your branch is ahead of 'origin/main' by 2 commits.    (use "git push" to publish your local commits)
 Changes to be committed:
	modified:   colegas.html

--- a/colegas.html
+++ b/colegas.html
@@ -19,7 +19,7 @@ permalink: /colegas/
             <div class="resource-icon"><i class="fas fa-file-pdf"></i></div>
             <h3>Protocolo de manejo de accesos vasculares</h3>
             <p>Enlace a la Guía Clínica Española del Acceso Vascular para Hemodiálisis.</p>
-            <a href="{{ 'assets\docs\S0211699517302175.pdf' | relative_url }}" class="btn">Descargar PDF</a>
+            <a href="{{ '/assets/docs/S0211699517302175.pdf' | relative_url }}" class="btn">Descargar PDF</a>
         </div>
         <div class="resource-card">
             <div class="resource-icon"><i class="fas fa-file-pdf"></i></div>
