On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	renamed:    assets/docs/S0211699517302175.pdf -> assets/docs/acceso-vascular-hemodialisis.pdf
	new file:   assets/docs/anticoagulacion-hemodialisis.pdf
	new file:   assets/docs/manejo-complicaciones-hemodialisis.pdf
	modified:   colegas.html

--- a/colegas.html
+++ b/colegas.html
@@ -19,19 +19,19 @@ permalink: /colegas/
             <div class="resource-icon"><i class="fas fa-file-pdf"></i></div>
             <h3>Protocolo de manejo de accesos vasculares</h3>
             <p>Enlace a la Guía Clínica Española del Acceso Vascular para Hemodiálisis.</p>
-            <a href="{{ '/assets/docs/S0211699517302175.pdf' | relative_url }}" class="btn">Descargar PDF</a>
+            <a href="{{ '/assets/docs/acceso-vascular-hemodialisis.pdf' | relative_url }}" class="btn">Descargar PDF</a>
         </div>
         <div class="resource-card">
             <div class="resource-icon"><i class="fas fa-file-pdf"></i></div>
-            <h3>Protocolo de anticoagulación</h3>
-            <p>Guía para la administración correcta de anticoagulantes durante el procedimiento de hemodiálisis.</p>
-            <a href="{{ '/assets/docs/protocolo-anticoagulacion.pdf' | relative_url }}" class="btn">Descargar PDF</a>
+            <h3>Guía de Anticoagulación en Hemodiálisis</h3>
+            <p>Herrero Calvo José A., Sánchez González Carmen, Tornero Molina Fernando, Anticoagulación en Hemodiálisis. En: Lorenzo V., López Gómez JM (Eds). Nefrología al día. ISSN: 2659-2606. Disponible en: https://www.nefrologiaaldia.org/580</p>
+            <a href="{{ '/assets/docs/anticoagulacion-hemodialisis.pdf' | relative_url }}" class="btn">Descargar PDF</a>
         </div>
         <div class="resource-card">
             <div class="resource-icon"><i class="fas fa-file-pdf"></i></div>
             <h3>Manejo de complicaciones intradialíticas</h3>
-            <p>Protocolo de actuación frente a complicaciones comunes durante la sesión de hemodiálisis.</p>
-            <a href="{{ '/assets/docs/manejo-complicaciones.pdf' | relative_url }}" class="btn">Descargar PDF</a>
+            <p>Jaldo Rodriguez Maite, Albalate Ramón Marta, Complicaciones agudas durante la sesión de hemodiálisis. En: Lorenzo V., López Gómez JM (Eds). Nefrología al día. ISSN: 2659-2606. Disponible en: https://www.nefrologiaaldia.org/569</p>
+            <a href="{{ '/assets/docs/manejo-complicaciones-hemodialisis.pdf' | relative_url }}" class="btn">Descargar PDF</a>
         </div>
     </div>
 </section>
