On branch main  Your branch is behind 'origin/main' by 1 commit, and can be fast-forwarded.    (use "git pull" to update your local branch)
 Changes to be committed:
	modified:   _layouts/default.html
	new file:   assets/js/eventos-scn.js
	modified:   colegas.html

--- a/colegas.html
+++ b/colegas.html
@@ -80,30 +80,9 @@ permalink: /colegas/
 <section class="content-section">
     <div class="section-header">
         <i class="fas fa-calendar-alt"></i>
-        <h2>Próximos eventos</h2>
+        <h2>Eventos de la Sociedad Chilena de Nefrología</h2>
     </div>
     <div class="events-list">
-        <div class="event-item">
-            <div class="event-date">
-                <span class="month">Abr</span>
-                <span class="day">15</span>
-            </div>
-            <div class="event-details">
-                <h3>Webinar: Avances en técnicas de hemodiálisis</h3>
-                <p>Presentación online sobre los últimos avances en técnicas de hemodiálisis y su aplicación clínica.</p>
-                <p class="event-meta"><i class="fas fa-clock"></i> 18:00 - 19:30 | <i class="fas fa-video"></i> Evento virtual</p>
-            </div>
-        </div>
-        <div class="event-item">
-            <div class="event-date">
-                <span class="month">May</span>
-                <span class="day">22</span>
-            </div>
-            <div class="event-details">
-                <h3>Taller: Manejo de accesos vasculares difíciles</h3>
-                <p>Sesión práctica enfocada en estrategias para el manejo de accesos vasculares complicados.</p>
-                <p class="event-meta"><i class="fas fa-clock"></i> 09:00 - 13:00 | <i class="fas fa-map-marker-alt"></i> Centro de Diálisis Paillaco</p>
-            </div>
-        </div>
+        <!-- Los eventos se cargarán automáticamente aquí -->
     </div>
 </section>
