On branch main  Your branch is up to date with 'origin/main'.
 Changes to be committed:
	deleted:    .github/scripts/scrape_eventos.py
	deleted:    .github/workflows/update-eventos.yml
	modified:   _layouts/default.html
	modified:   colegas.html

--- a/colegas.html
+++ b/colegas.html
@@ -80,9 +80,11 @@ permalink: /colegas/
 <section class="content-section">
     <div class="section-header">
         <i class="fas fa-calendar-alt"></i>
-        <h2>Eventos de la Sociedad Chilena de Nefrología</h2>
+        <h2>Próximos eventos</h2>
     </div>
     <div class="events-list">
-        <!-- Los eventos se cargarán automáticamente aquí -->
+        <a href="https://www.nefro.cl/web/" target="_blank" rel="noopener" class="btn">
+            Consulta la página de la Sociedad Chilena de Nefrología
+        </a>
     </div>
 </section>
