--- a/pacientes.html
+++ b/pacientes.html
@@ -18,13 +18,12 @@ include_faq_script: true
     <div class="blog-posts">
         {% for post in site.posts limit:3 %}
         <article class="blog-card">
-            <div class="blog-image">
+            <div class="blog-image" style="width:120px; height:120px; display:flex; align-items:center; justify-content:center; border-radius:8px; overflow:hidden;">
                 {% if post.image %}
-                <img src="{{ post.image | relative_url }}" alt="{{ post.title }}">
+                <img src="{{ post.image | relative_url }}" alt="{{ post.title }}" style="width:100%; height:100%; object-fit:cover;">
                 {% else %}
-                <!-- Placeholder para imagen del blog -->
+                <div class="blog-img-placeholder" style="width:120px; height:120px; background:#f0f0f0; border-radius:8px;"></div>
                 {% endif %}
-                <div class="blog-img-placeholder"></div>
             </div>
             <div class="blog-content">
                 <h3>{{ post.title }}</h3>
